change into bryan's configuration

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,34 +1,27 @@
-# use `prefix + I` to install plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'catppuccin/tmux#v2.1.3'
-set -g @catppuccin_flavor "mocha"
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-run '~/.config/tmux/plugins/tpm/tpm'
+#below reset tmux prefix command key, using 'Ctrl + b'
+set -g prefix `
+unbind C-b
+# 发送前缀键到其他程序 按2次 ` 键,即可将 ` 键当成正常字符发送出去
+bind ` send-prefix
+#set swap pane key, kjhl means up-down-left-right
+bind-key k select-pane -U
+bind-key j select-pane -D
+bind-key h select-pane -L
+bind-key l select-pane -R
 
-set -g mouse on
-set -g default-terminal "screen-256color"
-set -g renumber-windows on
-# setw -g automatic-rename  off
-# setw -g allow-rename off
-
-# keybindins:
-set -g prefix C-space
-# use `prefix + [` to enter the copy mode
-setw -g mode-keys vi
-bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -Tcopy-mode-vi 'y' send -X copy-selection
-
+# -------- 分割面板 --------
+# 重新绑定 垂直 水平 分割键
+# -v 水平分割成上下两个
+# -h 垂直分割成左右两个
+unbind '"'
+unbind %
 bind | split-window -h
 bind - split-window -v
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
 
+# 打开鼠标模式
+set-option -g mouse on
+
+# 设置窗口和面板索引
+# 第一个窗口和面板的索引为1
+set -g base-index 1
+setw -g pane-base-index 1
