--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,27 +1,60 @@
-#below reset tmux prefix command key, using 'Ctrl + b'
-set -g prefix `
-unbind C-b
-# 发送前缀键到其他程序 按2次 ` 键,即可将 ` 键当成正常字符发送出去
-bind ` send-prefix
-#set swap pane key, kjhl means up-down-left-right
-bind-key k select-pane -U
-bind-key j select-pane -D
-bind-key h select-pane -L
-bind-key l select-pane -R
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
 
-# -------- 分割面板 --------
-# 重新绑定 垂直 水平 分割键
-# -v 水平分割成上下两个
-# -h 垂直分割成左右两个
-unbind '"'
-unbind %
-bind | split-window -h
-bind - split-window -v
 
-# 打开鼠标模式
-set-option -g mouse on
-
-# 设置窗口和面板索引
-# 第一个窗口和面板的索引为1
+# show effects
+set-option -sa terminal-features ',xterm-256color:RGB'
+# setw -g utf8 on
+set -g terminal-overrides "*88col*:colors=88,*256col*:colors=256,xterm*:colors=256"
 set -g base-index 1
 setw -g pane-base-index 1
+set -g mouse on
+# update "terminal window" title
+set-option -g set-titles on
+# I rely on zsh to rename window title
+setw -g automatic-rename off
+
+
+# key binding
+set-option -g prefix `
+unbind-key C-b
+unbind '"'
+unbind %
+bind ` send-prefix
+# unbind :
+# unbind \;
+bind \; command-prompt
+
+setw -g mode-keys vi
+setw -g xterm-keys off
+bind - split-window -v
+bind | split-window -h
+
+# other setting
+# scrollback buffer size increase
+set -g history-limit 10000
+set-option -g visual-activity on
+setw -g monitor-activity on
+# aliasing tmux to "tmux -2" should also do the trick
+set -g status-justify centre
+set -g status-bg black
+set -g status-left "#[fg=red][ #[fg=green]#h #[fg=red]]#[default]"
+set -g status-left-length 20
+set -g status-right-length 25
+set -g status-right "#[fg=red][ #[fg=green]%H:%M #[fg=magenta]%a %m-%d #[fg=red]] #[default]"
+#set -g message-style "fd=black,bg=colour109,bold"
+setw -g window-status-format '#[fg=blue,bold]#I: #W#F#[default]'
+setw -g window-status-current-format '#[fg=yellow,bold,reverse]#I: #W#F#[default] '
+
+run-shell ~/CodeSpace/tmux-resurrect/resurrect.tmux
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
